--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^4.16.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-tooltip": "^1.0.7",
@@ -31,7 +29,7 @@
     "framer-motion": "^8.5.5",
     "lucide-react": "0.105.0-alpha.4",
     "ms": "^2.1.3",
-    "next": "13.5.5-canary.19",
+    "next": "14.1.4",
     "next-auth": "4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -53,7 +51,6 @@
     "postcss": "^8.4.31",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
-    "prisma": "^4.16.2",
     "tailwindcss": "^3.3.3"
   }
 }
